# RemoteMic

./: Cargo.toml  Makefile  README.md
.github/workflows/: CI.yaml  release.yml
src/: audio.rs  main.rs  page.rs  preflight.rs  server.rs
