[package]
name = "remotemic"
version = "1.0.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
debug = false
rpath = false

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.32"
rand = "0.10.1"
tokio = { version = "1.52.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
